# whowatch

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.old  INSTALL  KEYS  Makefile  Makefile.am  Makefile.in  NEWS  PLUGINS.readme  README  README.md  TODO  acconfig.h  configure.ac  configure.in  owner.c  proc.c  process.c  process.c.orig  procinfo.c  procinfo.h  proctree.c  proctree.h  screen.c  screen.c.patched  tar2git  whowatch.1  whowatch.c  whowatch.c.backup  whowatch.c.patched  whowatch.desktop  whowatch.h  whowatch.h.patched  whowatch.patch
src/: Makefile.am  Makefile.in  acconfig.h  block.c  exti.c  help.c  info_box.c  input_box.c  input_box.c.backup  kbd.c  kbd.h  list.h  menu.c  menu_hooks.c  menu_hooks.h  owner.c  plist.c  pluglib.c  pluglib.h  proc_plugin.c  process.c  procinfo.c  procinfo.h  proctree.c  proctree.h  screen.c  search.c  subwin.c  subwin.h  term.c  test.c  ulist.c  ulist.h  user.c  user_plugin.c  var.h  wdgts.c  whowatch.c  whowatch.h
src/dialects/bsd/: proc_plugin.c  procinfo.c
src/dialects/linux/: proc_plugin.c  procinfo.c  procinfo.h
src/sys/: Makefile.am
src/sys/bsd/: Makefile.am  proc_plugin.c  procinfo.h
src/sys/linux/: Makefile.am  proc_plugin.c  procinfo.c
