dnl Process this file with autoconf to produce a configure script.
AC_INIT(whowatch.c)

VERSION="1.4"
PACKAGGE=whowatch
AC_SUBST(VERSION)
AC_SUBST(PACKAGE)

AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
dnl Replace `main' with a function in -lkvm:
AC_CHECK_LIB(kvm, kvm_openfiles)
dnl Replace `main' with a function in -lncurses:
AC_CHECK_LIB(ncurses, initscr)
dnl AC_CHECK_LIB(ncurses, mvwchgat, AC_DEFINE(HAVE_MVWCHGAT))

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h)
AC_CHECK_HEADERS(curses.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_STRUCT_ST_RDEV
AC_HEADER_TIME

AC_MSG_CHECKING([whether utmp has USER_PROCESS type])
AC_TRY_COMPILE([
#include <sys/types.h>
#include <utmp.h>
],
[int i=USER_PROCESS;],[AC_MSG_RESULT(yes)
	AC_DEFINE(HAVE_USER_PROCESS)], AC_MSG_RESULT(no))

AC_MSG_CHECKING([whether utmp has DEAD_PROCESS type])
AC_TRY_COMPILE([
#include <sys/types.h>
#include <utmp.h>
],
[int i=DEAD_PROCESS;],[AC_MSG_RESULT(yes)
	AC_DEFINE(HAVE_DEAD_PROCESS)], AC_MSG_RESULT(no))

AC_MSG_CHECKING([whether utmp struct has ut_pid member])
AC_TRY_COMPILE([
#include <sys/types.h>
#include <utmp.h>
],
[struct utmp u;int i=u.ut_pid;],[AC_MSG_RESULT(yes)
	AC_DEFINE(HAVE_UTPID)], AC_MSG_RESULT(no))

AC_MSG_CHECKING([whether utmp struct has ut_name member])
AC_TRY_COMPILE([
#include <sys/types.h>
#include <utmp.h>
],
[struct utmp u;char *c=u.ut_name;],[AC_MSG_RESULT(yes)
	AC_DEFINE(HAVE_UT_NAME)], AC_MSG_RESULT(no))

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(select)

AC_MSG_CHECKING([whether sysctl() can be used])
AC_TRY_COMPILE([#include <sys/types.h>
#include <sys/param.h>
#include <sys/sysctl.h>],
[
int mib[]={CTL_KERN,KERN_PROC,KERN_PROC_PID,1};
int len;
sysctl(mib, 4, 0, &len, 0, 0);
],
[AC_MSG_RESULT(yes); AC_DEFINE(HAVE_PROCESS_SYSCTL)],
AC_MSG_RESULT(no))

AC_OUTPUT(Makefile)

