## SPDX-License-Identifier: GPL-2.0+
##
## Copyright 2013 Paul Wise <pabs3@bonedaddy.net>
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <https://www.gnu.org/licenses/>.

bin_PROGRAMS = whowatch

whowatch_SOURCES = \
	whowatch.c \
	whowatch.h \
	plist.c \
	procinfo.c \
	procinfo.h \
	proctree.c \
	block.c \
	owner.c \
	screen.c \
	ulist.c \
	ulist.h \
	list.h \
	exti.c \
	proctree.h \
	pluglib.c \
	pluglib.h \
	wdgts.c \
	proc_plugin.c \
	user_plugin.c \
	var.h \
	kbd.c \
	kbd.h
